finished 7.44, almost done with 7.38

--- a/SortingMandentory/SortingMandentory/SortingMandentory.vcxproj
+++ b/SortingMandentory/SortingMandentory/SortingMandentory.vcxproj
@@ -146,9 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Line.h" />
+    <ClInclude Include="point.h" />
     <ClInclude Include="Sorting.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Line.cpp" />
+    <ClCompile Include="point.cpp" />
     <ClCompile Include="Sorting.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
